--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
                                 </option>
                                 <option value="Сыктывкар">Сыктывкар
                                 </option>
-                                <option value="desТомскt51">Томск
+                                <option value="Томск">Томск
                                 </option>
                                 <option value="Тюмень">Тюмень
                                 </option>
@@ -391,13 +391,13 @@
                                 placeholder="+791 775 509 29" required>
                         </div>
                         <div class="form-request__cell field">
-                            <label class="field__label" for="message">Комментарий к грузу</label>
+                            <label class="field__label" for="message">Комментарии к грузу</label>
                             <textarea class="field__control" id="message" name="message"
                                 placeholder="Груз имеет высокую ценность" required></textarea>
                         </div>
 
                         <div class="form-request__actions">
-                            <p>Свяжемся с вами в течение 15 минут для уточнения деталей</p>
+                            <p>Свяжемся с&nbsp;вами в&nbsp;течение 15&nbsp;минут для уточнения деталей</p>
                         </div>
                         <button class="button button-calc" type="submit">
                             Рассчитать стоимость <span class="icon icon--right-arrow"></span>
@@ -405,10 +405,8 @@
                     </form>
                 </div>
             </div>
-
-
         </section>
-         <!--—END SECTION COST OF TRANSPORTATION-->
+        <!--—END SECTION COST OF TRANSPORTATION-->
     </main>
     <!--—BEGIN FOOTER -->
     <footer class="footer">
