секция О нас -десктоп, планшет, мобилка

--- a/index.html
+++ b/index.html
@@ -407,6 +407,64 @@
             </div>
         </section>
         <!--—END SECTION COST OF TRANSPORTATION-->
+        <!--—BEGIN ABOUT US SECTION-->
+        <section class="about">
+            <div class="about__inner container">
+                <div class="about__header">
+                    <h2 class="about__title h2"> <span>Jar-cargo</span> — ваш надёжный<br> и опытный партнёр</h2>
+                    <p class="about__subtitle desc">10&nbsp;лет опыта в&nbsp;перевозках и&nbsp;логистике</p>
+                </div>
+                <ul class="about__list">
+                    <li class="about__item">
+                        <div class="about-card tile">
+                            <img class="about-card__icon" src="./images/about/about-icon-1.svg" alt="" width="75"
+                                height="75" loading="lazy">
+                            <h3 class="about-card__title">Гибкость и адаптивность</h3>
+                            <div class="about-card__description">
+                                <p>Подстроимся под ваши задачи и&nbsp;требования к&nbsp;перевозкам особых грузов.
+                                    Оптимизируем логистику до&nbsp;самой выгодной стоимости.</p>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="about__item">
+                        <div class="about-card tile">
+                            <img class="about-card__icon" src="./images/about/about-icon-2.svg" alt="" width="75"
+                                height="75" loading="lazy">
+                            <h3 class="about-card__title ">Срочная доставка за&nbsp;24&nbsp;часа&nbsp;по России
+                                и&nbsp;миру</h3>
+                                <div class="about-card__description">
+                                    <p>Подстроимся под ваши задачи и&nbsp;требования к&nbsp;перевозкам особых грузов.
+                                        Оптимизируем логистику до&nbsp;самой выгодной стоимости.</p>
+                                </div>
+                        </div>
+                    </li>
+                    <li class="about__item">
+                        <div class="about-card tile">
+                            <img class="about-card__icon" src="./images/about/about-icon-3.svg" alt="" width="75"
+                                height="75" loading="lazy">
+                            <h3 class="about-card__title">Страхование доставки
+                                и&nbsp;груза</h3>
+                            <div class="about-card__description">
+                                <p>Ничего не&nbsp;случится. Если случится&nbsp;&mdash; возмещение по&nbsp;страховым
+                                    случаям.</p>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="about__item">
+                        <div class="about-card tile">
+                            <img class="about-card__icon" src="./images/about/about-icon-4.svg" alt="" width="75"
+                                height="75" loading="lazy">
+                            <h3 class="about-card__title">Отслеживание груза</h3>
+                            <div class="about-card__description">
+                                <p>По&nbsp;системе бронирования мы&nbsp;всегда в&nbsp;курсе, где груз в&nbsp;данный
+                                    момент времени.
+                                    Фиксируем этапы на&nbsp;фото, видео.</p>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </section>
     </main>
     <!--—BEGIN FOOTER -->
     <footer class="footer">
