секция FAQ - десктоп, планшет, мобилка

--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
         </section>
         <!--—END SECTION COST OF TRANSPORTATION-->
         <!--—BEGIN ABOUT US SECTION-->
-        <section class="about">
+        <section class="section about">
             <div class="about__inner container">
                 <div class="about__header">
                     <h2 class="about__title h2"> <span>Jar-cargo</span> — ваш надёжный<br> и опытный партнёр</h2>
@@ -432,10 +432,10 @@
                                 height="75" loading="lazy">
                             <h3 class="about-card__title ">Срочная доставка за&nbsp;24&nbsp;часа&nbsp;по России
                                 и&nbsp;миру</h3>
-                                <div class="about-card__description">
-                                    <p>Подстроимся под ваши задачи и&nbsp;требования к&nbsp;перевозкам особых грузов.
-                                        Оптимизируем логистику до&nbsp;самой выгодной стоимости.</p>
-                                </div>
+                            <div class="about-card__description">
+                                <p>Подстроимся под ваши задачи и&nbsp;требования к&nbsp;перевозкам особых грузов.
+                                    Оптимизируем логистику до&nbsp;самой выгодной стоимости.</p>
+                            </div>
                         </div>
                     </li>
                     <li class="about__item">
@@ -465,6 +465,120 @@
                 </ul>
             </div>
         </section>
+        <!--—END ABOUT US SECTION-->
+        <!--—BEGIN SECTION FAQ-->
+        <section class="section faq">
+            <div class="faq__inner container">
+                <div class="faq__header">
+                    <h2 class="faq__title h2"> ЧАСТО ЗАДАВАЕМЫЕ<br> <span>ВОПРОСЫ</span></h2>
+                    <p class="faq__subtitle desc">Мы стараемся осуществлять наше деятельность максимально прозрачно,<br>
+                        поэтому готовы ответить на любые вопросы, касающиеся грузовых авиаперевозок</p>
+                </div>
+                <div class="accordion-group">
+                    <div class="accordion">
+                        <details class="accordion__details" name="faq" open>
+                            <summary class="accordion__summary">
+                                <h4 class="accordion__title h4">
+                                    <span role="term" aria-details="faq-1">Почему авиаперевозки?</span>
+                                    <span class="square"></span>
+                                </h4>
+                            </summary>
+                        </details>
+                        <div class="accordion__content" id="faq-1" role="definition">
+                            <div class="accordion__content-inner">
+                                <div class="accordion__content-body">
+                                    <p>Мы в компании JAR-CARGO считаем, что будущее только за авиасообщением, а в
+                                        условиях закрытых границ при пандемии мы смогли только убедиться в этом.
+                                        Благодаря вашему доверию и нашей усердной работе мы смогли не потерять
+                                        присутствие на рынке, а даже усилить свое влияние. Авиаперевозки — это
+                                        современный быстрый и удобный способ доставки любых грузов по всему миру</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion">
+                        <details class="accordion__details" name="faq">
+                            <summary class="accordion__summary">
+                                <h4 class="accordion__title h4">
+                                    <span role="term" aria-details="faq-2">Могу ли я отправить крупный груз за
+                                        рубеж?</span>
+                                    <span class="square"></span>
+                                </h4>
+                            </summary>
+                        </details>
+                        <div class="accordion__content" id="faq-2" role="definition">
+                            <div class="accordion__content-inner">
+                                <div class="accordion__content-body">
+                                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non animi excepturi
+                                        quisquam eos distinctio porro nulla. Impedit at vero voluptatem mollitia quasi
+                                        veritatis sit quidem eius! Harum nostrum suscipit inventore.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion">
+                        <details class="accordion__details" name="faq">
+                            <summary class="accordion__summary">
+                                <h4 class="accordion__title h4">
+                                    <span role="term" aria-details="faq-3">Вы отправляете только крупные грузы или
+                                        берете мелкие посылки?</span>
+                                    <span class="square"></span>
+                                </h4>
+                            </summary>
+                        </details>
+                        <div class="accordion__content" id="faq-3" role="definition">
+                            <div class="accordion__content-inner">
+                                <div class="accordion__content-body">
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, iusto. At quis
+                                        voluptates sapiente architecto quaerat! Vel atque, iusto itaque deserunt
+                                        praesentium maiores excepturi vero corporis quidem vitae mollitia fugit.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion">
+                        <details class="accordion__details" name="faq">
+                            <summary class="accordion__summary">
+                                <h4 class="accordion__title h4">
+                                    <span role="term" aria-details="faq-4">Какой максимальный срок доставки?</span>
+                                    <span class="square"></span>
+                                </h4>
+                            </summary>
+                        </details>
+                        <div class="accordion__content" id="faq-4" role="definition">
+                            <div class="accordion__content-inner">
+                                <div class="accordion__content-body">
+                                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa quibusdam minima
+                                        nihil harum esse quisquam accusantium, fugiat quidem, eaque, cum ipsa provident
+                                        placeat? Voluptatum perspiciatis sit blanditiis ducimus eveniet eum.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="accordion">
+                        <details class="accordion__details" name="faq">
+                            <summary class="accordion__summary">
+                                <h4 class="accordion__title h4">
+                                    <span role="term" aria-details="faq-5">Безопасно отправлять продукты питания или
+                                        точную электронику самолетом?</span>
+                                    <span class="square"></span>
+                                </h4>
+                            </summary>
+                        </details>
+                        <div class="accordion__content" id="faq-5" role="definition">
+                            <div class="accordion__content-inner">
+                                <div class="accordion__content-body">
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis soluta quia
+                                        rerum quidem! Reprehenderit maxime autem, debitis unde culpa fugiat cumque
+                                        aspernatur est ipsam esse. Quis ab voluptates molestiae nihil?</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!--—END SECTION FAQ-->
     </main>
     <!--—BEGIN FOOTER -->
     <footer class="footer">
