--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
         </section> -->
         <!--—BEGIN SECTION COST OF TRANSPORTATION-->
-        <section class="transportation-cost">
+        <!-- <section class="transportation-cost">
             <div class=" transportation-cost__wrap container">
                 <h2 class="h2">
                     <span>Рассчитайте</span> <br>
@@ -405,10 +405,10 @@
                     </form>
                 </div>
             </div>
-        </section>
+        </section> -->
         <!--—END SECTION COST OF TRANSPORTATION-->
         <!--—BEGIN ABOUT US SECTION-->
-        <section class="section about">
+        <!-- <section class="section about">
             <div class="about__inner container">
                 <div class="about__header">
                     <h2 class="about__title h2"> <span>Jar-cargo</span> — ваш надёжный<br> и опытный партнёр</h2>
@@ -416,7 +416,7 @@
                 </div>
                 <ul class="about__list">
                     <li class="about__item">
-                        <div class="about-card tile">
+                        <div class="about-card ">
                             <img class="about-card__icon" src="./images/about/about-icon-1.svg" alt="" width="75"
                                 height="75" loading="lazy">
                             <h3 class="about-card__title">Гибкость и адаптивность</h3>
@@ -427,7 +427,7 @@
                         </div>
                     </li>
                     <li class="about__item">
-                        <div class="about-card tile">
+                        <div class="about-card ">
                             <img class="about-card__icon" src="./images/about/about-icon-2.svg" alt="" width="75"
                                 height="75" loading="lazy">
                             <h3 class="about-card__title ">Срочная доставка за&nbsp;24&nbsp;часа&nbsp;по России
@@ -439,7 +439,7 @@
                         </div>
                     </li>
                     <li class="about__item">
-                        <div class="about-card tile">
+                        <div class="about-card ">
                             <img class="about-card__icon" src="./images/about/about-icon-3.svg" alt="" width="75"
                                 height="75" loading="lazy">
                             <h3 class="about-card__title">Страхование доставки
@@ -451,7 +451,7 @@
                         </div>
                     </li>
                     <li class="about__item">
-                        <div class="about-card tile">
+                        <div class="about-card ">
                             <img class="about-card__icon" src="./images/about/about-icon-4.svg" alt="" width="75"
                                 height="75" loading="lazy">
                             <h3 class="about-card__title">Отслеживание груза</h3>
@@ -464,10 +464,10 @@
                     </li>
                 </ul>
             </div>
-        </section>
+        </section> -->
         <!--—END ABOUT US SECTION-->
         <!--—BEGIN SECTION FAQ-->
-        <section class="section faq">
+        <!-- <section class="section faq">
             <div class="faq__inner container">
                 <div class="faq__header">
                     <h2 class="faq__title h2"> ЧАСТО ЗАДАВАЕМЫЕ<br> <span>ВОПРОСЫ</span></h2>
@@ -577,8 +577,45 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
         <!--—END SECTION FAQ-->
+        <!--—BEGIN SECTION SECTION OUR CLIENTS-->
+        <section class="section our-clients">
+            <div class="our-clients__inner container">
+                <div class="our-clients__header">
+                    <h2 class="our-clients__title h2">
+                        Наши <span>клиенты</span>
+                    </h2>
+                </div>
+                <div class="our-clients__body">
+                    <ul class="our-clients__list">
+                        <li class="our-clients__item">
+                            <h3 class="client_card h3">Строительные
+                                компании</h3>
+                        </li>
+                        <li class="our-clients__item">
+                            <h3 class=" client_cardh3">Производственные
+                                компании</h3>
+                        </li>
+                        <li class="our-clients__item">
+                            <h3 class="client_card h3">Сельское хозяйство и&nbsp;агробизнес</h3>
+                        </li>
+                        <li class="our-clients__item">
+                            <h3 class="client_card h3">Энергетические
+                                компании</h3>
+                        </li>
+                        <li class="our-clients__item">
+                            <h3 class="client_card h3">Торговые и&nbsp;оптовые компании</h3>
+                        </li>
+                        <li class="our-clients__item">
+                            <h3 class="client_card h3">Промышленные
+                                компании</h3>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+        <!--—END SECTION SECTION OUR CLIENTS-->
     </main>
     <!--—BEGIN FOOTER -->
     <footer class="footer">
