секция О нас - оптимизация фото, внесение в проект

--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
         </section> -->
         <!--—END SECTION COST OF TRANSPORTATION-->
         <!--—BEGIN ABOUT US SECTION-->
-        <!-- <section class="section about">
+        <section class="section about">
             <div class="about__inner container">
                 <div class="about__header">
                     <h2 class="about__title h2"> <span>Jar-cargo</span> — ваш надёжный<br> и опытный партнёр</h2>
@@ -464,7 +464,7 @@
                     </li>
                 </ul>
             </div>
-        </section> -->
+        </section>
         <!--—END ABOUT US SECTION-->
         <!--—BEGIN SECTION FAQ-->
         <!-- <section class="section faq">
@@ -580,7 +580,7 @@
         </section> -->
         <!--—END SECTION FAQ-->
         <!--—BEGIN SECTION SECTION OUR CLIENTS-->
-        <section class="section our-clients">
+        <!-- <section class="section our-clients">
             <div class="our-clients__inner container">
                 <div class="our-clients__header">
                     <h2 class="our-clients__title h2">
@@ -614,7 +614,7 @@
                     </ul>
                 </div>
             </div>
-        </section>
+        </section> -->
         <!--—END SECTION SECTION OUR CLIENTS-->
     </main>
     <!--—BEGIN FOOTER -->
