--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
         </section> -->
         <!--—END SECTION COST OF TRANSPORTATION-->
         <!--—BEGIN ABOUT US SECTION-->
-        <section class="section about">
+        <!-- <section class="section about">
             <div class="about__inner container">
                 <div class="about__header">
                     <h2 class="about__title h2"> <span>Jar-cargo</span> — ваш надёжный<br> и опытный партнёр</h2>
@@ -464,7 +464,7 @@
                     </li>
                 </ul>
             </div>
-        </section>
+        </section> -->
         <!--—END ABOUT US SECTION-->
         <!--—BEGIN SECTION FAQ-->
         <!-- <section class="section faq">
@@ -616,6 +616,62 @@
             </div>
         </section> -->
         <!--—END SECTION SECTION OUR CLIENTS-->
+        <!--—BEGIN SECTION WORK PROCESS-->
+        <section class="section work-process">
+            <div class="work-process__inner container">
+                <div class="work-process__header">
+                    <h2 class="work-process__title h2"> <span>как</span> мы работаем ?</h2>
+                    <p class="work-process__subtitle desc">JAR-CARGO&nbsp;&mdash; организуем процесс доставки<br>
+                        &laquo;под ключ&raquo;, без головной боли для вас.</p>
+                </div>
+                <ul class="work-process__list">
+                    <li class="work-process__item">
+                        <h3 class="work-process__title">Упрощаем логистику</h3>
+                        <div class="work-process__description">
+                            <p>Авиаперевозчики, как правило, занимаются только транспортировкой с&nbsp;одного аэродрома
+                                на
+                                другой. Это не&nbsp;включает в&nbsp;себя решение вопросов по&nbsp;упаковке,
+                                погрузке/разгрузке,
+                                таможенным вопросам, доставке от/до аэропорта и&nbsp;другие важные аспекты.
+                                Наша компания берёт всю работу и&nbsp;ответственность на&nbsp;себя.</p>
+                        </div>
+                    </li>
+                    <li class="work-process__item">
+                        <h3 class="work-process__title">Решение юридических и&nbsp;административных вопросов</h3>
+                        <div class="work-process__description">
+                            <p>Таможенные процедуры, лицензии, разрешения&nbsp;&mdash; это отдельная область,
+                                в&nbsp;которой у&nbsp;Jar-cargo
+                                есть опыт и&nbsp;знания. Вы&nbsp;можете столкнуться с&nbsp;ситуациями, когда перевозка
+                                требует
+                                специфических документов, мы&nbsp;позаботимся об&nbsp;этом заранее.</p>
+                        </div>
+                    </li>
+                    <li class="work-process__item">
+                        <h3 class="work-process__title">Обеспечим защиту груза, гарантии и&nbsp;надёжность</h3>
+                        <div class="work-process__description">
+                            <p>Наши специалисты знают, как правильно упаковать и&nbsp;защитить груз, чтобы
+                                минимизировать
+                                риски повреждения. Мы&nbsp;работаем даже с&nbsp;самыми нетривиальными задачами, включая
+                                перевозку
+                                животных или медицинского хрупкого оборудования.
+                                Мы&nbsp;страхуем груз и&nbsp;доставку.</p>
+                        </div>
+                    </li>
+                    <li class="work-process__item">
+                        <h3 class="work-process__title">Экономим ваше время</h3>
+                        <div class="work-process__description">
+                            <p>Благодаря опыту, мы&nbsp;знаем, как оптимизировать процесс перевозки, сэкономить время,
+                                ресурсы и&nbsp;деньги.
+                                Мы&nbsp;можем организовать комбинированные маршруты (в&nbsp;любой последовательности
+                                авиа+авто+Ж/Д+морем). Мы&nbsp;имеем партнёрские отношения с&nbsp;перевозчиками
+                                и&nbsp;доступ к&nbsp;выгодным
+                                тарифам</p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <!--—END SECTION WORK PROCESS-->
     </main>
     <!--—BEGIN FOOTER -->
     <footer class="footer">
