секция Как мы работаем - планшет, мобилка БЕЗ АНИМАЦИИ

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         <!--—BEGIN SECTION COST OF TRANSPORTATION-->
         <!-- <section class="transportation-cost">
             <div class=" transportation-cost__wrap container">
-                <h2 class="h2">
+                <h2 class="h2 header-block-on">
                     <span>Рассчитайте</span> <br>
                     стоимость<br> перевозки
                 </h2>
@@ -410,7 +410,7 @@
         <!--—BEGIN ABOUT US SECTION-->
         <!-- <section class="section about">
             <div class="about__inner container">
-                <div class="about__header">
+                <div class="about__header header-block">
                     <h2 class="about__title h2"> <span>Jar-cargo</span> — ваш надёжный<br> и опытный партнёр</h2>
                     <p class="about__subtitle desc">10&nbsp;лет опыта в&nbsp;перевозках и&nbsp;логистике</p>
                 </div>
@@ -469,7 +469,7 @@
         <!--—BEGIN SECTION FAQ-->
         <!-- <section class="section faq">
             <div class="faq__inner container">
-                <div class="faq__header">
+                <div class="faq__header header-block">
                     <h2 class="faq__title h2"> ЧАСТО ЗАДАВАЕМЫЕ<br> <span>ВОПРОСЫ</span></h2>
                     <p class="faq__subtitle desc">Мы стараемся осуществлять наше деятельность максимально прозрачно,<br>
                         поэтому готовы ответить на любые вопросы, касающиеся грузовых авиаперевозок</p>
@@ -577,7 +577,7 @@
                     </div>
                 </div>
             </div>
-        </section> -->
+        </section>  -->
         <!--—END SECTION FAQ-->
         <!--—BEGIN SECTION SECTION OUR CLIENTS-->
         <!-- <section class="section our-clients">
@@ -614,12 +614,12 @@
                     </ul>
                 </div>
             </div>
-        </section> -->
+        </section>
         <!--—END SECTION SECTION OUR CLIENTS-->
         <!--—BEGIN SECTION WORK PROCESS-->
-        <section class="section work-process">
+        <!-- <section class="section work-process">
             <div class="work-process__inner container">
-                <div class="work-process__header">
+                <div class="work-process__header header-block">
                     <h2 class="work-process__title h2"> <span>как</span> мы работаем ?</h2>
                     <p class="work-process__subtitle desc">JAR-CARGO&nbsp;&mdash; организуем процесс доставки<br>
                         &laquo;под ключ&raquo;, без головной боли для вас.</p>
@@ -632,12 +632,12 @@
                                 на
                                 другой. Это не&nbsp;включает в&nbsp;себя решение вопросов по&nbsp;упаковке,
                                 погрузке/разгрузке,
-                                таможенным вопросам, доставке от/до аэропорта и&nbsp;другие важные аспекты.
+                                таможенным вопросам, доставке от/до аэропорта и&nbsp;другие важные аспекты. <br>
                                 Наша компания берёт всю работу и&nbsp;ответственность на&nbsp;себя.</p>
                         </div>
                     </li>
                     <li class="work-process__item">
-                        <h3 class="work-process__title">Решение юридических и&nbsp;административных вопросов</h3>
+                        <h3 class="work-process__title">Решение юридических и административных вопросов</h3>
                         <div class="work-process__description">
                             <p>Таможенные процедуры, лицензии, разрешения&nbsp;&mdash; это отдельная область,
                                 в&nbsp;которой у&nbsp;Jar-cargo
@@ -653,7 +653,7 @@
                                 минимизировать
                                 риски повреждения. Мы&nbsp;работаем даже с&nbsp;самыми нетривиальными задачами, включая
                                 перевозку
-                                животных или медицинского хрупкого оборудования.
+                                животных или медицинского хрупкого оборудования.<br>
                                 Мы&nbsp;страхуем груз и&nbsp;доставку.</p>
                         </div>
                     </li>
@@ -661,7 +661,7 @@
                         <h3 class="work-process__title">Экономим ваше время</h3>
                         <div class="work-process__description">
                             <p>Благодаря опыту, мы&nbsp;знаем, как оптимизировать процесс перевозки, сэкономить время,
-                                ресурсы и&nbsp;деньги.
+                                ресурсы и&nbsp;деньги.<br>
                                 Мы&nbsp;можем организовать комбинированные маршруты (в&nbsp;любой последовательности
                                 авиа+авто+Ж/Д+морем). Мы&nbsp;имеем партнёрские отношения с&nbsp;перевозчиками
                                 и&nbsp;доступ к&nbsp;выгодным
@@ -670,7 +670,7 @@
                     </li>
                 </ul>
             </div>
-        </section>
+        </section> -->
         <!--—END SECTION WORK PROCESS-->
     </main>
     <!--—BEGIN FOOTER -->
