--- a/index.html
+++ b/index.html
@@ -672,6 +672,49 @@
             </div>
         </section> -->
         <!--—END SECTION WORK PROCESS-->
+        <!--—BEGIN ADVANTAGES SECTION-->
+        <section class="section advantages">
+            <div class="advantages__inner container">
+                <h2 class="h2 header-block-on">
+                    Почему авиаперевозки?<br>
+                    <span>Это надёжно, срочно,<br> безопасно!</span>
+                </h2>
+                <ul class="advantages__list">
+                    <li class="advantages__item">
+                        <h3 class="advantages__title">Скорость и надёжность доставки</h3>
+                        <div class="advantages__description">
+                            <p>Срочная и прогнозируемая доставка, возможна только с помощью авиаперевозок. В небе нет
+                                пробок.
+                                Действует ускоренный процесс таможенного оформления</p>
+                        </div>
+                    </li>
+                    <li class="advantages__item">
+                        <h3 class="advantages__title">Доступ к труднодоступным регионам</h3>
+                        <div class="advantages__description">
+                            <p>Дальний Восток, Сибирь, Арктика? Нам не важно!
+                                Преодолеем расстояния там, где другие не могут.</p>
+                        </div>
+                    </li>
+                    <li class="advantages__item">
+                        <h3 class="advantages__title">Широкие возможности для разных грузов</h3>
+                        <div class="advantages__description">
+                            <p>Для крупногабаритного груза проще подобрать транспортный самолёт, чем искать другой
+                                способ везти по земле.</p>
+                        </div>
+                    </li>
+                    <li class="advantages__item">
+                        <h3 class="advantages__title">Самая высокая безопасность груза</h3>
+                        <div class="advantages__description">
+                            <p>Более высокий уровень безопасности груза, специализированная упаковка, стандарты
+                                безопасности.
+                                Меньше времени в пути - меньше рисков.</p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <!--—END ADVANTAGES SECTION-->
+
     </main>
     <!--—BEGIN FOOTER -->
     <footer class="footer">
